GNOME Bugzilla – Bug 695599
tests: test_read_macros doesn't pass on ARM / raspberry pi
Last modified: 2013-04-27 10:50:54 UTC
version from http://cgit.freedesktop.org/gstreamer/gstreamer/commit/?id=31fbc86e09864354a058143039c484bad0344673 Running suite(s): GstABI 100%: Checks: 1, Failures: 0, Errors: 0 PASS: gst/gstabi Running suite(s): GstAtomicQueue 100%: Checks: 1, Failures: 0, Errors: 0 PASS: gst/gstatomicqueue Running suite(s): GstBuffer 100%: Checks: 11, Failures: 0, Errors: 0 PASS: gst/gstbuffer Running suite(s): GstBufferList 100%: Checks: 1, Failures: 0, Errors: 0 PASS: gst/gstbufferlist Running suite(s): GstMeta 100%: Checks: 2, Failures: 0, Errors: 0 PASS: gst/gstmeta Running suite(s): GstMemory 100%: Checks: 10, Failures: 0, Errors: 0 PASS: gst/gstmemory Running suite(s): GstBus 100%: Checks: 10, Failures: 0, Errors: 0 PASS: gst/gstbus Running suite(s): GstCaps 100%: Checks: 19, Failures: 0, Errors: 0 PASS: gst/gstcaps Running suite(s): Gst 100%: Checks: 6, Failures: 0, Errors: 0 PASS: gst/gstcpp Running suite(s): GstLibsCpp 100%: Checks: 1, Failures: 0, Errors: 0 PASS: libs/gstlibscpp Running suite(s): GstDateTime 100%: Checks: 15, Failures: 0, Errors: 0 PASS: gst/gstdatetime Running suite(s): GstInfo 100%: Checks: 5, Failures: 0, Errors: 0 PASS: gst/gstinfo Running suite(s): GstIterator 100%: Checks: 4, Failures: 0, Errors: 0 PASS: gst/gstiterator Running suite(s): GstMessage 100%: Checks: 1, Failures: 0, Errors: 0 PASS: gst/gstmessage Running suite(s): GstMiniObject 100%: Checks: 8, Failures: 0, Errors: 0 PASS: gst/gstminiobject Running suite(s): GstObject 100%: Checks: 7, Failures: 0, Errors: 0 PASS: gst/gstobject Running suite(s): GstPad 100%: Checks: 26, Failures: 0, Errors: 0 PASS: gst/gstpad Running suite(s): GstParamSpec 100%: Checks: 1, Failures: 0, Errors: 0 PASS: gst/gstparamspecs Running suite(s): GstPipeline 100%: Checks: 8, Failures: 0, Errors: 0 PASS: gst/gstpipeline Running suite(s): GstPoll 100%: Checks: 6, Failures: 0, Errors: 0 PASS: gst/gstpoll Running suite(s): GstSegment 100%: Checks: 6, Failures: 0, Errors: 0 PASS: gst/gstsegment Running suite(s): GstSystemClock 90%: Checks: 10, Failures: 0, Errors: 1 gst/gstsystemclock.c:188:E:waiting:test_single_shot:0: (after this point) Test timeout expired FAIL: gst/gstsystemclock Running suite(s): GstClock 100%: Checks: 1, Failures: 0, Errors: 0 PASS: gst/gstclock Running suite(s): GstStructure 100%: Checks: 14, Failures: 0, Errors: 0 PASS: gst/gststructure Running suite(s): GstTag 100%: Checks: 13, Failures: 0, Errors: 0 PASS: gst/gsttag Running suite(s): GstTagSetter 100%: Checks: 4, Failures: 0, Errors: 0 PASS: gst/gsttagsetter Running suite(s): GstTask 100%: Checks: 5, Failures: 0, Errors: 0 PASS: gst/gsttask Running suite(s): GstToc 100%: Checks: 1, Failures: 0, Errors: 0 PASS: gst/gsttoc Running suite(s): GstTocSetter 100%: Checks: 2, Failures: 0, Errors: 0 PASS: gst/gsttocsetter Running suite(s): GstValue 100%: Checks: 35, Failures: 0, Errors: 0 PASS: gst/gstvalue Running suite(s): states 100%: Checks: 3, Failures: 0, Errors: 0 PASS: generic/states Running suite(s): Pipelines 100%: Checks: 3, Failures: 0, Errors: 0 PASS: pipelines/simple-launch-lines Running suite(s): Pipeline cleanup 100%: Checks: 1, Failures: 0, Errors: 0 PASS: pipelines/cleanup Running suite(s): Parse Launch syntax 100%: Checks: 8, Failures: 0, Errors: 0 PASS: pipelines/parse-launch Running suite(s): Gst 100%: Checks: 6, Failures: 0, Errors: 0 PASS: gst/gst Running suite(s): GstBin 100%: Checks: 20, Failures: 0, Errors: 0 PASS: gst/gstbin Running suite(s): GstChildProxy 100%: Checks: 2, Failures: 0, Errors: 0 PASS: gst/gstchildproxy Running suite(s): Controller 100%: Checks: 10, Failures: 0, Errors: 0 PASS: gst/gstcontroller Running suite(s): GstElement 100%: Checks: 6, Failures: 0, Errors: 0 PASS: gst/gstelement Running suite(s): GstElementFactory 100%: Checks: 4, Failures: 0, Errors: 0 PASS: gst/gstelementfactory Running suite(s): GstEvent 100%: Checks: 2, Failures: 0, Errors: 0 PASS: gst/gstevent Running suite(s): GstGhostPad 100%: Checks: 17, Failures: 0, Errors: 0 PASS: gst/gstghostpad Running suite(s): GstPlugin 100%: Checks: 8, Failures: 0, Errors: 0 PASS: gst/gstplugin Running suite(s): GstPreset 100%: Checks: 5, Failures: 0, Errors: 0 PASS: gst/gstpreset Running suite(s): GstQuery 100%: Checks: 2, Failures: 0, Errors: 0 PASS: gst/gstquery Running suite(s): registry 100%: Checks: 1, Failures: 0, Errors: 0 PASS: gst/gstregistry Running suite(s): GstURI 100%: Checks: 4, Failures: 0, Errors: 0 PASS: gst/gsturi Running suite(s): GstUtils 85%: Checks: 20, Failures: 1, Errors: 2 gst/gstutils.c:911:E:general:test_math_scale_gmp:0: (after this point) Test timeout expired gst/gstutils.c:944:E:general:test_math_scale_gmp_int:0: (after this point) Test timeout expired gst/gstutils.c:1236:F:general:test_read_macros:0: Assertion 'cpointer == carray + 1' failed FAIL: gst/gstutils Running suite(s): Sinks 100%: Checks: 20, Failures: 0, Errors: 0 PASS: generic/sinks Running suite(s): capsfilter 100%: Checks: 1, Failures: 0, Errors: 0 PASS: elements/capsfilter Running suite(s): fakesink 100%: Checks: 6, Failures: 0, Errors: 0 PASS: elements/fakesink Running suite(s): fakesrc 100%: Checks: 6, Failures: 0, Errors: 0 PASS: elements/fakesrc Running suite(s): fdsrc 100%: Checks: 3, Failures: 0, Errors: 0 PASS: elements/fdsrc Running suite(s): filesink 100%: Checks: 3, Failures: 0, Errors: 0 PASS: elements/filesink Running suite(s): filesrc 100%: Checks: 6, Failures: 0, Errors: 0 PASS: elements/filesrc Running suite(s): funnel 100%: Checks: 2, Failures: 0, Errors: 0 PASS: elements/funnel Running suite(s): identity 100%: Checks: 1, Failures: 0, Errors: 0 PASS: elements/identity Running suite(s): multiqueue 100%: Checks: 7, Failures: 0, Errors: 0 PASS: elements/multiqueue Running suite(s): selector 100%: Checks: 6, Failures: 0, Errors: 0 PASS: elements/selector Running suite(s): tee 100%: Checks: 6, Failures: 0, Errors: 0 PASS: elements/tee Running suite(s): queue 100%: Checks: 8, Failures: 0, Errors: 0 PASS: elements/queue Running suite(s): queue2 100%: Checks: 6, Failures: 0, Errors: 0 PASS: elements/queue2 Running suite(s): valve 100%: Checks: 1, Failures: 0, Errors: 0 PASS: elements/valve Running suite(s): GstBaseSrc 100%: Checks: 7, Failures: 0, Errors: 0 PASS: libs/basesrc Running suite(s): GstBaseSink 100%: Checks: 3, Failures: 0, Errors: 0 PASS: libs/basesink Running suite(s): Controller 100%: Checks: 24, Failures: 0, Errors: 0 PASS: libs/controller Running suite(s): GstQueueArray 100%: Checks: 6, Failures: 0, Errors: 0 PASS: libs/queuearray Running suite(s): typefindhelper 100%: Checks: 1, Failures: 0, Errors: 0 PASS: libs/typefindhelper Running suite(s): pipelines-seek 100%: Checks: 1, Failures: 0, Errors: 0 PASS: pipelines/seek Running suite(s): stress 100%: Checks: 2, Failures: 0, Errors: 0 PASS: pipelines/stress Running suite(s): queue 100%: Checks: 1, Failures: 0, Errors: 0 PASS: pipelines/queue-error Running suite(s): LibsABI 100%: Checks: 1, Failures: 0, Errors: 0 PASS: libs/libsabi Running suite(s): adapter 100%: Checks: 12, Failures: 0, Errors: 0 PASS: libs/adapter Running suite(s): GstBitReader 100%: Checks: 3, Failures: 0, Errors: 0 PASS: libs/bitreader Running suite(s): GstByteReader 100%: Checks: 11, Failures: 0, Errors: 0 PASS: libs/bytereader Running suite(s): GstByteWriter 100%: Checks: 6, Failures: 0, Errors: 0 PASS: libs/bytewriter Running suite(s): GstCollectPads 100%: Checks: 7, Failures: 0, Errors: 0 PASS: libs/collectpads Running suite(s): GstNetClientClock 100%: Checks: 2, Failures: 0, Errors: 0 PASS: libs/gstnetclientclock Running suite(s): GstNetTimeProvider 100%: Checks: 2, Failures: 0, Errors: 0 PASS: libs/gstnettimeprovider Running suite(s): GstTestClock 100%: Checks: 22, Failures: 0, Errors: 0 PASS: libs/gsttestclock Running suite(s): GstBaseTransform 100%: Checks: 7, Failures: 0, Errors: 0 PASS: libs/transform1 Running suite(s): gst-inspect 100%: Checks: 1, Failures: 0, Errors: 0 PASS: tools/gstinspect
I think I know why the macro read test fails, will fix it later.
commit 1750620752ff4d8dd07e1fdd24c17b185cadfbcb Author: Tim-Philipp Müller <tim.muller@collabora.co.uk> Date: Tue Mar 12 13:53:57 2013 +0000 utils: make sure slow GST_READ_UINT* variants don't have unexpected side effects Fixes unit test on systems where unaligned memory access is not possible. https://bugzilla.gnome.org/show_bug.cgi?id=695599
Let's hope this is enough (multiplier of 10 on ARM): commit b48400b7a4da5e6776fb1ae526ebbd502b3e896b Author: Tim-Philipp Müller <tim@centricular.net> Date: Sat Apr 27 11:46:13 2013 +0100 check: set CK_TIMEOUT_MULTIPLIER on ARM https://bugzilla.gnome.org/show_bug.cgi?id=695599