utils: make sure slow GST_READ_UINT* variants don't have unexpected side effects

Fixes unit test on systems where unaligned memory access is not possible.

https://bugzilla.gnome.org/show_bug.cgi?id=695599